gen/antlr4/generated/gsc_iw_grammarParser.cpp

// Generated from gsc_iw_grammar.g4 by ANTLR 4.13.2


#include "gsc_iw_grammarListener.h"

#include "gsc_iw_grammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct Gsc_iw_grammarParserStaticData final {
  Gsc_iw_grammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Gsc_iw_grammarParserStaticData(const Gsc_iw_grammarParserStaticData&) = delete;
  Gsc_iw_grammarParserStaticData(Gsc_iw_grammarParserStaticData&&) = delete;
  Gsc_iw_grammarParserStaticData& operator=(const Gsc_iw_grammarParserStaticData&) = delete;
  Gsc_iw_grammarParserStaticData& operator=(Gsc_iw_grammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag gsc_iw_grammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<Gsc_iw_grammarParserStaticData> gsc_iw_grammarParserStaticData = nullptr;

void gsc_iw_grammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (gsc_iw_grammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(gsc_iw_grammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<Gsc_iw_grammarParserStaticData>(
    std::vector<std::string>{
      "program", "include", "inline", "declaration", "decl_usingtree", "decl_constant", 
      "decl_function", "stmt", "stmt_list", "stmt_or_dev_list", "stmt_dev", 
      "stmt_comp", "stmt_expr", "stmt_endon", "stmt_notify", "stmt_wait", 
      "stmt_waittill", "stmt_waittillmatch", "stmt_waittillframeend", "stmt_waitframe", 
      "stmt_if", "stmt_while", "stmt_dowhile", "stmt_for", "stmt_foreach", 
      "stmt_switch", "stmt_case", "stmt_default", "stmt_break", "stmt_continue", 
      "stmt_return", "stmt_breakpoint", "stmt_prof_begin", "stmt_prof_end", 
      "stmt_assert", "stmt_assertex", "stmt_assertmsg", "expr_assign", "expr", 
      "expr_ternary", "expr_or", "expr_and", "expr_bw_or", "expr_bw_xor", 
      "expr_bw_and", "expr_equality", "expr_relational", "expr_shift", "expr_additive", 
      "expr_multiplicative", "expr_unary", "expr_complement", "expr_negate", 
      "expr_animation", "expr_primary", "expr_call", "expr_method", "expr_function", 
      "expr_pointer", "expr_isdefined", "expr_istrue", "expr_reference", 
      "expr_parameters", "expr_arguments", "expr_tuple", "expr_add_array", 
      "expr_paren", "expr_lvalue", "expr_lvalue_array", "expr_lvalue_field", 
      "expr_object", "expr_object_subexpr", "expr_object_subexpr_no_call", 
      "expr_array_or_field_or_call", "expr_array_or_field", "expr_array", 
      "expr_field", "expr_size", "expr_thisthread", "expr_empty_array", 
      "expr_undefined", "expr_game", "expr_self", "expr_anim", "expr_level", 
      "expr_animtree", "expr_vector", "expr_path", "expr_identifier_field", 
      "expr_identifier", "expr_istring", "expr_string", "expr_float", "expr_integer", 
      "expr_false", "expr_true"
    },
    std::vector<std::string>{
      "", "'#'", "'/#'", "'#/'", "'#inline'", "'#include'", "'#using_animtree'", 
      "'#animtree'", "'endon'", "'notify'", "'wait'", "'waittill'", "'waittillmatch'", 
      "'waittillframeend'", "'waitframe'", "'if'", "'else'", "'do'", "'while'", 
      "'for'", "'foreach'", "'in'", "'switch'", "'case'", "'default'", "'break'", 
      "'continue'", "'return'", "'breakpoint'", "'prof_begin'", "'prof_end'", 
      "'assert'", "'assertex'", "'assertmsg'", "'thread'", "'childthread'", 
      "'thisthread'", "'call'", "'true'", "'false'", "'undefined'", "'size'", 
      "'game'", "'self'", "'anim'", "'level'", "'isdefined'", "'istrue'", 
      "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "'.'", "'..'", "'...'", 
      "'::'", "':'", "';'", "'\\u003F'", "'++'", "'--'", "'<<'", "'>>'", 
      "'||'", "'&&'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'!'", 
      "'~'", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'>>='", "'<<='", 
      "'|='", "'^='", "'&='", "'|'", "'^'", "'&'", "'+'", "'-'", "'*'", 
      "'/'", "'%'"
    },
    std::vector<std::string>{
      "", "HASH", "DEVBEGIN", "DEVEND", "INLINE", "INCLUDE", "USINGTREE", 
      "ANIMTREE", "ENDON", "NOTIFY", "WAIT", "WAITTILL", "WAITTILLMATCH", 
      "WAITTILLFRAMEEND", "WAITFRAME", "IF", "ELSE", "DO", "WHILE", "FOR", 
      "FOREACH", "IN", "SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", 
      "RETURN", "BREAKPOINT", "PROFBEGIN", "PROFEND", "ASSERT", "ASSERTEX", 
      "ASSERTMSG", "THREAD", "CHILDTHREAD", "THISTHREAD", "CALL", "TRUE", 
      "FALSE", "UNDEFINED", "SIZE", "GAME", "SELF", "ANIM", "LEVEL", "ISDEFINED", 
      "ISTRUE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
      "COMMA", "DOT", "DOUBLEDOT", "ELLIPSIS", "DOUBLECOLON", "COLON", "SEMICOLON", 
      "QMARK", "INCREMENT", "DECREMENT", "LSHIFT", "RSHIFT", "OR", "AND", 
      "EQUALITY", "INEQUALITY", "LESS_EQUAL", "GREATER_EQUAL", "LESS", "GREATER", 
      "NOT", "COMPLEMENT", "ASSIGN", "AMUL", "ADIV", "AMOD", "AADD", "ASUB", 
      "ARSH", "ALSH", "ABWOR", "ABWXOR", "ABWAND", "BW_OR", "BW_XOR", "BW_AND", 
      "ADD", "SUB", "MUL", "DIV", "MOD", "FLOAT", "INTEGER", "STRING", "ISTRING", 
      "HSTRING", "IDENTIFIER", "PATH", "WHITESPACE", "LINE_COMMENT", "BLOCK_COMMENT", 
      "GSCDOC_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  gsc_iw_grammarParserStaticData = std::move(staticData);
}

}

gsc_iw_grammarParser::gsc_iw_grammarParser(TokenStream *input) : gsc_iw_grammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

gsc_iw_grammarParser::gsc_iw_grammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  gsc_iw_grammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *gsc_iw_grammarParserStaticData->atn, gsc_iw_grammarParserStaticData->decisionToDFA, gsc_iw_grammarParserStaticData->sharedContextCache, options);
}

gsc_iw_grammarParser::~gsc_iw_grammarParser() {
  delete _interpreter;
}

const atn::ATN& gsc_iw_grammarParser::getATN() const {
  return *gsc_iw_grammarParserStaticData->atn;
}

std::string gsc_iw_grammarParser::getGrammarFileName() const {
  return "gsc_iw_grammar.g4";
}

const std::vector<std::string>& gsc_iw_grammarParser::getRuleNames() const {
  return gsc_iw_grammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& gsc_iw_grammarParser::getVocabulary() const {
  return gsc_iw_grammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView gsc_iw_grammarParser::getSerializedATN() const {
  return gsc_iw_grammarParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

gsc_iw_grammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* gsc_iw_grammarParser::ProgramContext::EOF() {
  return getToken(gsc_iw_grammarParser::EOF, 0);
}

std::vector<gsc_iw_grammarParser::IncludeContext *> gsc_iw_grammarParser::ProgramContext::include() {
  return getRuleContexts<gsc_iw_grammarParser::IncludeContext>();
}

gsc_iw_grammarParser::IncludeContext* gsc_iw_grammarParser::ProgramContext::include(size_t i) {
  return getRuleContext<gsc_iw_grammarParser::IncludeContext>(i);
}

std::vector<gsc_iw_grammarParser::InlineContext *> gsc_iw_grammarParser::ProgramContext::inline_() {
  return getRuleContexts<gsc_iw_grammarParser::InlineContext>();
}

gsc_iw_grammarParser::InlineContext* gsc_iw_grammarParser::ProgramContext::inline_(size_t i) {
  return getRuleContext<gsc_iw_grammarParser::InlineContext>(i);
}

std::vector<gsc_iw_grammarParser::DeclarationContext *> gsc_iw_grammarParser::ProgramContext::declaration() {
  return getRuleContexts<gsc_iw_grammarParser::DeclarationContext>();
}

gsc_iw_grammarParser::DeclarationContext* gsc_iw_grammarParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<gsc_iw_grammarParser::DeclarationContext>(i);
}

std::vector<tree::TerminalNode *> gsc_iw_grammarParser::ProgramContext::SEMICOLON() {
  return getTokens(gsc_iw_grammarParser::SEMICOLON);
}

tree::TerminalNode* gsc_iw_grammarParser::ProgramContext::SEMICOLON(size_t i) {
  return getToken(gsc_iw_grammarParser::SEMICOLON, i);
}


size_t gsc_iw_grammarParser::ProgramContext::getRuleIndex() const {
  return gsc_iw_grammarParser::RuleProgram;
}

void gsc_iw_grammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void gsc_iw_grammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

gsc_iw_grammarParser::ProgramContext* gsc_iw_grammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, gsc_iw_grammarParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(198);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1152923703630102652) != 0) || _la == gsc_iw_grammarParser::IDENTIFIER) {
      setState(196);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case gsc_iw_grammarParser::INCLUDE: {
          setState(192);
          include();
          break;
        }

        case gsc_iw_grammarParser::INLINE: {
          setState(193);
          inline_();
          break;
        }

        case gsc_iw_grammarParser::DEVBEGIN:
        case gsc_iw_grammarParser::DEVEND:
        case gsc_iw_grammarParser::USINGTREE:
        case gsc_iw_grammarParser::SIZE:
        case gsc_iw_grammarParser::IDENTIFIER: {
          setState(194);
          declaration();
          break;
        }

        case gsc_iw_grammarParser::SEMICOLON: {
          setState(195);
          match(gsc_iw_grammarParser::SEMICOLON);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(200);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(201);
    match(gsc_iw_grammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

gsc_iw_grammarParser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* gsc_iw_grammarParser::IncludeContext::INCLUDE() {
  return getToken(gsc_iw_grammarParser::INCLUDE, 0);
}

gsc_iw_grammarParser::Expr_pathContext* gsc_iw_grammarParser::IncludeContext::expr_path() {
  return getRuleContext<gsc_iw_grammarParser::Expr_pathContext>(0);
}

tree::TerminalNode* gsc_iw_grammarParser::IncludeContext::SEMICOLON() {
  return getToken(gsc_iw_grammarParser::SEMICOLON, 0);
}


size_t gsc_iw_grammarParser::IncludeContext::getRuleIndex() const {
  return gsc_iw_grammarParser::RuleInclude;
}

void gsc_iw_grammarParser::IncludeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInclude(this);
}

void gsc_iw_grammarParser::IncludeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInclude(this);
}

gsc_iw_grammarParser::IncludeContext* gsc_iw_grammarParser::include() {
  IncludeContext *_localctx = _tracker.createInstance<IncludeContext>(_ctx, getState());
  enterRule(_localctx, 2, gsc_iw_grammarParser::RuleInclude);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(203);
    match(gsc_iw_grammarParser::INCLUDE);
    setState(204);
    expr_path();
    setState(205);
    match(gsc_iw_grammarParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InlineContext ------------------------------------------------------------------

gsc_iw_grammarParser::InlineContext::InlineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* gsc_iw_grammarParser::InlineContext::INLINE() {
  return getToken(gsc_iw_grammarParser::INLINE, 0);
}

gsc_iw_grammarParser::Expr_pathContext* gsc_iw_grammarParser::InlineContext::expr_path() {
  return getRuleContext<gsc_iw_grammarParser::Expr_pathContext>(0);
}

tree::TerminalNode* gsc_iw_grammarParser::InlineContext::SEMICOLON() {
  return getToken(gsc_iw_grammarParser::SEMICOLON, 0);
}


size_t gsc_iw_grammarParser::InlineContext::getRuleIndex() const {
  return gsc_iw_grammarParser::RuleInline;
}

void gsc_iw_grammarParser::InlineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInline(this);
}

void gsc_iw_grammarParser::InlineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInline(this);
}

gsc_iw_grammarParser::InlineContext* gsc_iw_grammarParser::inline_() {
  InlineContext *_localctx = _tracker.createInstance<InlineContext>(_ctx, getState());
  enterRule(_localctx, 4, gsc_iw_grammarParser::RuleInline);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(207);
    match(gsc_iw_grammarParser::INLINE);
    setState(208);
    expr_path();
    setState(209);
    match(gsc_iw_grammarParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

gsc_iw_grammarParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* gsc_iw_grammarParser::DeclarationContext::DEVBEGIN() {
  return getToken(gsc_iw_grammarParser::DEVBEGIN, 0);
}

tree::TerminalNode* gsc_iw_grammarParser::DeclarationContext::DEVEND() {
  return getToken(gsc_iw_grammarParser::DEVEND, 0);
}

gsc_iw_grammarParser::Decl_usingtreeContext* gsc_iw_grammarParser::DeclarationContext::decl_usingtree() {
  return getRuleContext<gsc_iw_grammarParser::Decl_usingtreeContext>(0);
}

gsc_iw_grammarParser::Decl_constantContext* gsc_iw_grammarParser::DeclarationContext::decl_constant() {
  return getRuleContext<gsc_iw_grammarParser::Decl_constantContext>(0);
}

gsc_iw_grammarParser::Decl_functionContext* gsc_iw_grammarParser::DeclarationContext::decl_function() {
  return getRuleContext<gsc_iw_grammarParser::Decl_functionContext>(0);
}


size_t gsc_iw_grammarParser::DeclarationContext::getRuleIndex() const {
  return gsc_iw_grammarParser::RuleDeclaration;
}

void gsc_iw_grammarParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void gsc_iw_grammarParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<gsc_iw_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}

gsc_iw_grammarParser::DeclarationContext* gsc_iw_grammarParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, gsc_iw_grammarParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(216);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(211);
      match(gsc_iw_grammarParser::DEVBEGIN);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(212);
      match(gsc_iw_grammarParser::DEVEND);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(213);
      decl_usingtree();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(214);
      decl_constant();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(215);
      decl_function();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
